--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "spatie/laravel-honeypot": "^4.3",
-        "spatie/laravel-permission": "^5.10"
+        "spatie/laravel-permission": "^5.10",
+        "spatie/laravel-query-builder": "^5.2",
+        "spatie/laravel-settings": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
