--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "spatie/laravel-settings": "^3.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.8",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
