--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=InvoiceApp
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:+F2qj23qzYK6t0cD1Hf6vzvhZughE9hNRuC1SdBsqdo=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://mycrm.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -56,3 +56,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SETTINGS_CACHE_ENABLED = true
+DEBUGBAR_ENABLED = true
